added signal & tests & modified celery task & moved logic in views into utils

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -17,6 +17,10 @@ psycopg2-binary = "*"
 celery = "*"
 requests = "*"
 redis = "*"
+python-dateutil = "*"
+aiofiles = "*"
+fpdf = "*"
+pytest-django = "*"
 
 [dev-packages]
 
