added elasticsearch & added vue spa client & added some tests

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -21,6 +21,9 @@ python-dateutil = "*"
 aiofiles = "*"
 fpdf = "*"
 pytest-django = "*"
+elasticsearch = "*"
+elasticsearch-dsl = "*"
+django-elasticsearch-dsl = "*"
 
 [dev-packages]
 
